# december-shader

./: .gitignore  CMakeLists.txt  flake.nix
include/: application-loop.hpp  file-operation.hpp  renderer.hpp  shape-primitives.hpp
include/opengl/: gl-shader.hpp  gpu-buffer.hpp  mesh.hpp  opengl.hpp  render-target.hpp  shader-program.hpp  shader.hpp  vao.hpp
include/sdl/: attributes.hpp  context.hpp  window.hpp
include/shader/: gl-shader.hpp
nix/: derivations.nix
src/: application-loop.cpp  file-operation.cpp  main.cpp  renderer.cpp
src/glad/: glad.c
src/opengl/: gl-shader.cpp  gpu-buffer.cpp  mesh.cpp  opengl.cpp  render-target.cpp  shader-program.cpp  shader.cpp  vao.cpp
src/opengl/src/: vertex.vert
src/sdl/: attributes.cpp  context.cpp  window.cpp
src/shader/: gl-shader.cpp
src/shader-files/: background.frag  background.vert  fragment.frag  vertex.vert
